--- a/footer/footer.css
+++ b/footer/footer.css
@@ -23,7 +23,7 @@ footer .conteudo_footer {
     justify-content: flex-start;
 }
 
-footer img {
+.conteudo_footer img, .logo_branca {
     margin: 0;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -32,26 +32,37 @@ footer img {
     cursor: pointer;
 }
 
-footer img:hover {
+.conteudo_footer img:hover {
     content: url("../utils/img/logo-cinza.png");
 }
-
-footer h4 {
+.fale_conosco{
+    display:flex;
+    flex-direction: column;
+    align-self: start;
+    margin: 0;
+}
+.fale_conosco h4 {
+    order:0;
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: white;
+    font-size: 20px;
+}
+.fale_conosco p {
+    order:2;
     margin-left: 20px;
     margin-bottom: 20px;
     color: white;
-    cursor: pointer;
+    text-decoration: none;
+    font-weight: 600;
 }
-
-footer h4:hover {
-    color: #C0C0C0;
-}
-
 footer a {
-    margin-left: 20px;
+    margin-left: 18px;
     margin-bottom: 20px;
     color: white;
     cursor: pointer;
+    font-size: 20px;
     text-decoration: none;
     font-weight: 600;
 }
