--- a/materia/materia.css
+++ b/materia/materia.css
@@ -34,27 +34,32 @@ body {
 }
 .conteudo_materia h1{
     margin: 0px;
-    font-size: 50px;
+    font-size: 45px;
     font-weight: 600;
 }
 .conteudo_materia h3{
     order:2;
     margin-left: 20px;
     margin-top: 10px;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 400;
 }
 .conteudo_materia img{
     order:3;
-    width: 100%;
-    border-radius: 22px;
-    margin-top:40px;
+    width: 800px;
+    height: 500px;
+    border-radius: 22px !important;           
+    margin: 0;              
+    margin-top: 20px;              
+    cursor: pointer;
+    object-fit: cover; 
 }
 .conteudo_materia .texto_materia{
     order: 4;
     margin-top: 25px;
     text-align: start;
-    font-size: 25px;
+    font-size: 20px;
+    line-height: 1.8;
     font-weight: 400;
 }
 .conteudo_materia h2{
@@ -108,9 +113,12 @@ body {
 }
 
 .bloco_relacionados .bloco_materia img{
-    width: 100%;
-    height: auto;
+    width: 230px;
+    height: 150px;           /* Define altura fixa */
     border-radius: 22px;
+    margin: 0;               /* Remove centralização automática */
+    cursor: pointer;
+    object-fit: cover; 
 }
 
 .bloco_relacionados .bloco_materia h4{
@@ -142,13 +150,275 @@ body {
 }
 
 @media screen and (max-width:800px) {
-    .conteudo_materia{
-        width: 100%;
-        padding: 20px;
-    }
+.conteudo_materia{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    order:1;
+    width: 90%;
+    height: auto;
+    margin: 0 auto;
+    margin-top:30px;
+    font-family: "Inter";
 
-    .relacionados{
-        width: 100%;
-        padding: 20px;
-    }
+}
+.conteudo_materia .titulo_materia{
+    order: 1;
+    display:flex;
+    margin: 0px;
+}
+.conteudo_materia .line{
+    border:3px solid #00756A;
+    height: 33px;
+    width: 0;
+    border-radius: 6px;
+    margin: 0px;
+    margin-top: 5px;
+    margin-right: 5px;
+}
+.conteudo_materia h1{
+    margin: 0px;
+    font-size: 33px;
+    font-weight: 600;
+}
+.conteudo_materia h3{
+    order:2;
+    margin-top: 10px;
+    font-size: 18px;
+    font-weight: 400;
+}
+.conteudo_materia img{
+    order:3;
+    width: 630px;
+    height: 400px;
+    border-radius: 22px !important;           
+    margin: 0;              
+    margin-top: 20px;              
+    cursor: pointer;
+    object-fit: cover; 
+}
+.conteudo_materia .texto_materia p{
+    order: 4;
+    text-align: start;
+    font-size: 16px;
+    line-height: 1.8;
+    font-weight: 400;
+}
+.conteudo_materia h2{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.relacionados{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin-top:20px;
+    margin-bottom: 30px;
+    font-family: "Inter";
+}
+.relacionados .titulo_relacionados{
+    display: flex;
+    flex-direction: row;
+    font-size: 15px;
+    margin: 0px;
+    font-family: "Inter";
+}
+ .relacionados .titulo_relacionados .line{
+    border:3px solid #00756A;
+    height: 33px;
+    width: 0;
+    border-radius: 6px;
+    margin: 0px;
+    margin-top: 5px;
+    margin-right: 5px;
+}
+.relacionados h1{
+    margin: 0px;
+    font-size: 33px;
+    font-weight: 600;
+}
+
+.relacionados .conteudo_relacionados {
+    margin-top: 20px;
+    display: flex;
+    width: 100%;
+    gap: 3.3%;
+}
+.bloco_relacionados{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.bloco_materia {
+    width: 33%;
+    padding: 5px;
+    text-decoration: none;
+}
+
+.bloco_relacionados .bloco_materia img{
+    width: 190px;
+    height: 130px;           /* Define altura fixa */
+    border-radius: 22px;
+    margin: 0;               /* Remove centralização automática */
+    cursor: pointer;
+    object-fit: cover;
+}
+
+.bloco_relacionados .bloco_materia h4{
+    text-decoration: none;
+    font-family: "Inter";
+    text-align: start;
+    margin-top: 10px;
+    font-size: 18px;
+    cursor: pointer;
+    color: black;
+    text-decoration: none;
+}
+
+.bloco_relacionados .bloco_materia a{
+    font-family: "Inter";
+    text-align: start;
+    margin-top: 5px;
+    font-size: 15px;
+    color:#575757;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+}
+
+@media screen and (max-width:650px) {
+.conteudo_materia{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    order:1;
+    width: 90%;
+    height: auto;
+    margin: 0 auto;
+    margin-top:20px;
+    font-family: "Inter";
+
+}
+.conteudo_materia .titulo_materia{
+    order: 1;
+    display:flex;
+    margin: 0px;
+}
+.conteudo_materia .line{
+    border:3px solid #00756A;
+    height: 25px;
+    width: 0;
+    border-radius: 6px;
+    margin: 0px;
+    margin-top: 5px;
+    margin-right: 5px;
+}
+.conteudo_materia h1{
+    margin: 0px;
+    font-size: 25px;
+    font-weight: 600;
+}
+.conteudo_materia h3{
+    order:2;
+    margin-top: 10px;
+    font-size: 16px;
+    font-weight: 400;
+}
+.conteudo_materia img{
+    order:3;
+    width: 450px;
+    height: 300px;
+    border-radius: 22px !important;           
+    margin: 0;              
+    margin-top: 20px;              
+    cursor: pointer;
+    object-fit: cover; 
+}
+.conteudo_materia .texto_materia p{
+    order: 4;
+    width: 100%;
+    margin:0 auto;
+    margin-top: 5px;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.relacionados{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin-top:20px;
+    margin-bottom: 10px;
+    font-family: "Inter";
+}
+.relacionados .titulo_relacionados{
+    display: flex;
+    flex-direction: row;
+    font-size: 15px;
+    margin: 0px;
+    font-family: "Inter";
+}
+ .relacionados .titulo_relacionados .line{
+    border:3px solid #00756A;
+    height: 25px;
+    width: 0;
+    border-radius: 6px;
+    margin: 0px;
+    margin-top: 5px;
+    margin-right: 5px;
+}
+.relacionados h1{
+    margin: 0px;
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.relacionados .conteudo_relacionados {
+    margin-top: 10px;
+    display: flex;
+    width: 100%;
+    gap: 3.3%;
+}
+.bloco_relacionados{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap:5px;
+}
+.bloco_materia {
+    width: 33%;
+    text-decoration: none;
+}
+
+.bloco_relacionados .bloco_materia img{
+    width: 150px;
+    height: 110px;           /* Define altura fixa */
+    border-radius: 22px;
+    margin: 0;               /* Remove centralização automática */
+    cursor: pointer;
+    object-fit: cover;
+}
+
+.bloco_relacionados .bloco_materia h4{
+    text-decoration: none;
+    font-family: "Inter";
+    text-align: start;
+    margin-top: 10px;
+    font-size: 15px;
+    cursor: pointer;
+    color: black;
+    text-decoration: none;
+}
+
+.bloco_relacionados .bloco_materia a{
+    font-family: "Inter";
+    text-align: start;
+    margin-top: 5px;
+    font-size: 12px;
+    color:#575757;
+    cursor: pointer;
+    text-decoration: none;
+}
+
 }
